CICD/Terraform/aws-intance/Sis_Lessons/pms-versions/pms_instance_v2/modules/security_group/main.tf
# modules\security_group\main.tf

resource "aws_security_group" "petclinic_sg" {
  name        = var.name
  description = "Security group for petclinic app"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.name
  }

}
